Update api routes and lootbot components
